gobmkida/g2/store_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/store_persistent_owl_cache/src/engine/persistent.c:1299:4: error: use of undeclared identifier 'byte_A12ADF'
|| byte_A12ADF[v26] != 3 && ( v19 = ( unsigned int)v25[19], ( _DWORD)v19 == v24) 
   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/store_persistent_owl_cache/src/obj/1/persistent.o] Error 1
